Fix dark mode button background color

--- a/styles.css
+++ b/styles.css
@@ -115,6 +115,10 @@ nav a:hover {
 }
 
 .dark-mode #btnDarkToggle {
+  background: #1d2150ee;
+}
+
+.dark-mode #btnDarkToggle: houver {
   background: linear-gradient(90deg, #fc41b5 0%, #fd518b 99%);
 }
 
